--- a/LethalMuseum/LethalMuseum.csproj
+++ b/LethalMuseum/LethalMuseum.csproj
@@ -55,6 +55,7 @@
 
     <ItemGroup>
       <Folder Include="Managers\" />
+      <Folder Include="Resources\" />
       <Folder Include="UI\" />
     </ItemGroup>
 </Project>
