--- a/LethalMuseum/LethalMuseum.csproj
+++ b/LethalMuseum/LethalMuseum.csproj
@@ -52,15 +52,10 @@
     <!-- Dependencies -->
     <ItemGroup>
         <PackageReference Include="Rune580.Mods.LethalCompany.InputUtils" Version="0.7.10" />
+        <PackageReference Include="Evaisa.LethalLib " Version="1.0.3" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
         <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Managers\" />
-      <Folder Include="Resources\" />
-      <Folder Include="UI\" />
     </ItemGroup>
 </Project>
