--- a/LethalMuseum/LethalMuseum.csproj
+++ b/LethalMuseum/LethalMuseum.csproj
@@ -55,9 +55,7 @@
     <ItemGroup>
         <PackageReference Include="Rune580.Mods.LethalCompany.InputUtils" Version="0.7.10" />
         <PackageReference Include="Evaisa.LethalLib " Version="1.0.3" />
-        <Reference Include="LethalConfig">
-            <HintPath>$(BepinEx)\AinaVT-LethalConfig\LethalConfig\LethalConfig.dll</HintPath>
-        </Reference>
+        <Reference Include="$(BepinEx)\AinaVT-LethalConfig\LethalConfig\LethalConfig.dll" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
