--- a/LethalMuseum/LethalMuseum.csproj
+++ b/LethalMuseum/LethalMuseum.csproj
@@ -51,7 +51,7 @@
     
     <!-- Dependencies -->
     <ItemGroup>
-        <PackageReference Include="Rune580.Mods.LethalCompany.InputUtils" Version="0.7.10" />
+        <PackageReference Include="Rune580.Mods.LethalCompany.InputUtils" Version="0.7.10" IncludeAssets="compile" />
         <PackageReference Include="Evaisa.LethalLib " Version="1.0.3" />
     </ItemGroup>
 
